--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -9,7 +9,10 @@ body {
 	font-family: "rooney-sans", Avenir-Book, Calibri, sans-serif;
 	color: #424242;
 	line-height: 1.4;
+	font-size: small;
 }
+
+
 
 /* Fonts */
 h1 {
@@ -18,11 +21,15 @@ h1 {
 	font-weight: bold;
 }
 
+
+
 .container {
 	margin: 2em auto;
 	max-width: 630px;
 	text-align: center;
 }
+
+
 
 /* The following font information and color codes are provided for you.  They do not match the prototype exactly, but they are fine to use for the assignment and doing so does not count against you.  They are simply meant to help you save time.  We would like everyone to have as close to a pixel-perfect match to the prototype as possible.  If you do find a font/color that matches more precisely, please share it with the team so we can improve the activity for future applicants.  Thank you!  Happy coding!
 
@@ -40,3 +47,177 @@ h1 {
 */
 
 /* Your CSS code goes here */
+
+p {
+	padding: 10px;
+}
+
+
+.grid-container {
+	margin: 2em auto;
+	width: 250px;
+	height: 350px;
+	text-align: center;
+  display: grid;
+  grid-template-columns: 125px 125px;
+	grid-template-rows: 50px 250px 50px;
+  grid-column-gap: 20px;
+	grid-row-gap: 20px;
+  align-content: center;
+}
+
+.center-grid {
+	grid-column: 1 / 3;
+	grid-row: 2 / 3;
+  display: grid;
+  grid-template-columns: 100%;
+	grid-template-rows: 10px 250px;
+	border-style: solid;
+ 	border-width: 1px;
+	border-color: #E9E9E9;
+	font-size: small;
+}
+
+.bar {
+	grid-row: 1 / 2;
+	display: grid;
+	grid-template-columns: 75% 25%;
+	grid-template-row: 100%;
+	border-bottom: 1px solid #E9E9E9;
+}
+
+.red-bar {
+	grid-column: 1 / 2;
+	background-color: #EE5E39
+}
+.donate-grid {
+	grid-row: 2 / 3;
+	text-align: center;
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: 50% 25% 25%;
+	grid-column-gap: 20px;
+
+}
+
+.donate-text {
+	grid-row: 1 / 2;
+	grid-column: 1 / 3;
+	text-align: left;
+	padding: 10px;
+	color: #8F8F8F
+}
+
+.money-box-left {
+	grid-row: 2 / 3;
+	grid-column: 1 / 2;
+	color: #777;
+	border-radius: 5px;
+	border: 1px solid #E9E9E9;
+	padding: 10px;
+	font-size: small;
+	font-style: bold;
+	text-align: left;
+	margin: 10px 0px 10px 20px;
+	height: 45px;
+	width: 100px;
+	font-size: medium;
+}
+
+.money-box-right {
+	grid-row: 2 / 3;
+	grid-column: 2 / 3;
+	background: #1CBC2C;
+	color: white;
+	border-radius: 5px;
+	border: 1px solid #E9E9E9;
+	padding: 10px;
+	font-size: small;
+	font-style: bold;
+
+	margin: 10px 0px 10px 0px;
+	height: 45px;
+	width: 100px;
+	font-size: medium;
+}
+
+.donate-text2 {
+	grid-row: 3 / 4;
+	grid-column: 1 / 3;
+	height: 35px;
+	text-align: left;
+	padding: 5px 10px 0px 20px;
+	margin: 0px;
+	color: #20A1D4;
+	font-style: italic;
+}
+
+.amount-left {
+  grid-column: 1 / 3;
+	grid-row: 1 / 2;
+  background: #414141;
+	padding-left: 30px;
+  padding-right: 30px;
+	padding-top: 15px;
+	padding-bottom: 10px;
+  color: #fff;
+  position:relative;
+  border-radius: 5px;
+	justify-self: stretch;
+	font-size: small;
+}
+
+.donate-box{
+  grid-column: 1 / 3;
+	grid-row: 2 / 6;
+	display: grid;
+	grid-template-columns: auto 1fr;
+	border-radius: 5px;
+	border-style: solid;
+ 	border-width: 2px;
+	border-color: #E9E9E9;
+}
+
+.small-box-left {
+  grid-column: 1 / 2;
+	grid-row: 3 / 4;
+	height: 35px;
+	background: #FBFBFB;
+  color: #777;
+  position:relative;
+  border-radius: 5px;
+	border-style: solid;
+ 	border-width: 1px;
+	border-color: #E9E9E9;
+	padding: 10px;
+	font-size: small;
+ }
+
+.small-box-right {
+  grid-column: 2 / 3;
+	grid-row: 3 / 4;
+	height: 35px;
+	background: #FBFBFB;
+	color: #777;
+	position:relative;
+	border-radius: 5px;
+	border-style: solid;
+ 	border-width: 1px;
+	border-color: #E9E9E9;
+	padding: 10px;
+	font-size: small;
+  }
+
+
+.sb:after {
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid #414141;
+  border-bottom: 10px solid transparent;
+  right: 10%;
+  bottom: -18px;
+}
